--- a/3DMesh/3DMesh.vcxproj
+++ b/3DMesh/3DMesh.vcxproj
@@ -169,6 +169,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Light.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Utils.h" />
   </ItemGroup>
