--- a/3DMesh/3DMesh.vcxproj.filters
+++ b/3DMesh/3DMesh.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="Mesh.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="Light.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
